[gd_scene load_steps=9 format=2]

[ext_resource path="res://Resources/GFX/CardDelivery/Building3.png" type="Texture" id=1]
[ext_resource path="res://Resources/GFX/CardDelivery/Building4.png" type="Texture" id=2]
[ext_resource path="res://Resources/GFX/CardDelivery/Tree2.png" type="Texture" id=3]
[ext_resource path="res://Resources/GFX/CardDelivery/Building2.png" type="Texture" id=4]
[ext_resource path="res://Resources/GFX/CardDelivery/Building1.png" type="Texture" id=5]
[ext_resource path="res://Resources/GFX/CardDelivery/Trotuar.jpg" type="Texture" id=6]
[ext_resource path="res://Resources/GFX/CardDelivery/Tree1.png" type="Texture" id=7]
[ext_resource path="res://Scenes/CardDelivery/Trotuar.gd" type="Script" id=8]

[node name="Trotuar" type="Sprite"]
position = Vector2( 74.9989, 644.808 )
texture = ExtResource( 6 )
script = ExtResource( 8 )

[node name="Object1" type="Sprite" parent="."]
position = Vector2( -60, -850 )
texture = ExtResource( 5 )

[node name="Object2" type="Sprite" parent="."]
position = Vector2( -60, -650 )
texture = ExtResource( 7 )

[node name="Object3" type="Sprite" parent="."]
position = Vector2( -60, -450 )
texture = ExtResource( 2 )

[node name="Object4" type="Sprite" parent="."]
position = Vector2( -60, -250 )
texture = ExtResource( 3 )

[node name="Object5" type="Sprite" parent="."]
position = Vector2( -60, -50 )
texture = ExtResource( 4 )

[node name="Object6" type="Sprite" parent="."]
position = Vector2( -60, 150 )
texture = ExtResource( 7 )

[node name="Object7" type="Sprite" parent="."]
position = Vector2( -60, 350 )
texture = ExtResource( 1 )

[node name="Object8" type="Sprite" parent="."]
position = Vector2( -60, 550 )
texture = ExtResource( 3 )

[node name="Object9" type="Sprite" parent="."]
position = Vector2( -60, 750 )
texture = ExtResource( 4 )
